--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <h2>About Me</h2>
                 <h5>Developer <span>& Designer</span></h5>
                 <p>I am a front-end web developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.A responsive design makes your website accessible to all users, regardless of their device.</p>
-                <a href="about.html#school" class="button">See More</a>
+                <a href=".../about.html#school" class="button">See More</a>
             </div>
         </div>
     </section>
@@ -72,7 +72,7 @@
                     <p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
 
                     <p style="text-align: center;">
-                        <a class="button" href="pandemic.html">Read More</a>
+                        <a class="button" href=".../pandemic.html">Read More</a>
                     </p>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                     <p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
 
                     <p style="text-align: center;">
-                        <a class="button" href="pandemic.html">Read More</a>
+                        <a class="button" href=".../pandemic.html">Read More</a>
                     </p>
                 </div>
             </div>
@@ -96,7 +96,7 @@
                     <p>Affiliate marketing is an advertising model in which a company compensates third-party publishers to generate traffic or leads to the company’s products and services. The third-party publishers are affiliates, and the commission fee incentivizes them to find ways to promote the company.</p>
 
                     <p style="text-align: center;">
-                        <a class="button" href="pandemic.html">Read More</a>
+                        <a class="button" href=".../pandemic.html">Read More</a>
                     </p>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                 <h2>Question and Answer</h2>
                 <h5>Developer <span>& Designer</span></h5>
                 <p>I am a front-end web developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.A responsive design makes your website accessible to all users, regardless of their device.</p>
-                <a href="QandA.html" class="button">See More</a>
+                <a href=".../QandA.html" class="button">See More</a>
             </div>
     <div class="download_cv">
         <a id="download_cv"></a>
